<resources>
    <string name="app_name">Go Corona</string>
    <string name="home">Stats</string>
    <string name="guide">Precautions</string>
    <string name="settings">Help</string>
    <string name="most_infected">Most Infected</string>
    <string name="view_all">View All</string>
    <string name="your_country">Your Country</string>
    <string name="total_cases">Total Cases</string>
    <string name="info">Info</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active_cases">Active Cases</string>
    <string name="updated_at">Updated at:</string>
    <string name="serious_cases">Serious Cases</string>
    <string name="search_country">Search Country...</string>
    <string name="tips">Tips</string>
    <string name="error_loading">Error! please try again..</string>
</resources>
