<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/detail_total_cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="56dp"
            android:textColor="@color/black"
            android:textSize="32sp"
            tools:text="11,560" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            android:text="@string/total_cases"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/time_ic"
                    android:layout_width="@dimen/standar_icon_size"
                    android:layout_height="@dimen/standar_icon_size"
                    android:src="@drawable/ic_deaths" />

                <TextView
                    android:id="@+id/stats_heading_one"
                    style="@style/stats_heading"
                    android:text="@string/deaths" />


                <TextView
                    android:id="@+id/detail_deaths"
                    style="@style/test_description"
                    tools:text="14 Sec" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/time_ic_two"
                    android:layout_width="@dimen/standar_icon_size"
                    android:layout_height="@dimen/standar_icon_size"
                    android:src="@drawable/ic_recovered" />

                <TextView
                    android:id="@+id/stats_heading_two"
                    style="@style/stats_heading"
                    android:text="@string/recovered" />


                <TextView
                    android:id="@+id/detail_recovered"
                    style="@style/test_description"
                    tools:text="7 Sec" />


            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/questions_ic"
                    android:layout_width="@dimen/standar_icon_size"
                    android:layout_height="@dimen/standar_icon_size"
                    android:src="@drawable/ic_active_cases" />

                <TextView
                    android:id="@+id/stats_heading_three"
                    style="@style/stats_heading"
                    android:text="@string/active_cases" />


                <TextView
                    android:id="@+id/detail_active_cases"
                    style="@style/test_description"
                    tools:text="2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/topics_ic"
                    android:layout_width="@dimen/standar_icon_size"
                    android:layout_height="@dimen/standar_icon_size"
                    android:src="@drawable/ic_serious" />

                <TextView
                    android:id="@+id/stats_heading_four"
                    style="@style/stats_heading"
                    android:text="@string/serious_cases" />


                <TextView
                    android:id="@+id/detail_serious_cases"
                    style="@style/test_description"
                    tools:text="2" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeUpdatedTv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:text="@string/updated_at" />

    <TextView
        android:id="@+id/timeUpdatedTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        tools:text="2020-30-12 12:30" />


</RelativeLayout>