<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">

    <ProgressBar
        android:id="@+id/homeProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/bottom_nav_padding">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_border"
                android:layout_marginLeft="@dimen/margin_border"
                android:layout_marginTop="@dimen/margin_border_small"
                android:layout_marginEnd="@dimen/margin_border"
                android:layout_marginBottom="@dimen/margin_border_small"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="@dimen/margin_border"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/margin_border">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_border_small"
                    android:paddingBottom="@dimen/margin_border_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/total_cases"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_border_small"
                        android:layout_marginBottom="@dimen/margin_border_small"
                        android:text="317,008"
                        android:textColor="@color/white"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
                        android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                        android:drawableTint="@color/white"
                        android:gravity="center"
                        android:text="@string/info"
                        android:textColor="@color/white" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_border_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Death\n4"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:gravity="center"
                            android:text="Recovered\n24"
                            android:textColor="@color/white" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/includedRoot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_border"
                android:layout_marginLeft="@dimen/margin_border"
                android:layout_marginTop="@dimen/margin_border_small"
                android:layout_marginEnd="@dimen/margin_border"
                android:layout_marginBottom="@dimen/margin_border_small">

                <TextView
                    android:id="@+id/txtYourCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_country"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/includedItemCountry"
                    layout="@layout/stats_view_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtYourCountry" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_border"
                android:layout_marginLeft="@dimen/margin_border"
                android:layout_marginTop="@dimen/margin_border_small"
                android:layout_marginEnd="@dimen/margin_border"
                android:layout_marginBottom="@dimen/margin_border_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_infected"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/view_all" />

            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/statsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>